<resources>
    <string name="app_name">MobileAss2</string>
    <string name="lose">Lose Weight</string>
    <string name="focus">Body Focus</string>
    <string name="relax">Body Relax</string>
    <string name="frag_sport">Sport Category</string>
    <string name="frag_diet">Diet</string>
    <string name="frag_profile">Profile</string>

    <!-- Workout -->
    <string name="jumpingjack">JUMPING JACKS</string>
    <string name="wallsit">WALL SIT</string>
    <string name="situp">SIT UP</string>
    <string name="stepup">STEP-UP ONTO CHAIR</string>
    <string name="squat">SQUAT</string>
    <string name="pushup">PUSH UP</string>
    <string name="plank">PLANK</string>
    <string name="highknee">HIGH KNEE</string>
    <string name="lunge">LUNGES</string>
    <string name="sideplank">SIDE PLANK</string>
    <string name="crunch">SLOW CRUNCH</string>
    <string name="inchworm">INCH WORM</string>
    <string name="highplank">HIGH PLANK TO DOWN DOG</string>
    <string name="buttkick">BUTT KICK</string>
    <string name="mountainclimb">MOUNTAIN CLIMBING</string>
    <string name="scissorkick">SCISSOR KICK</string>

    <!-- Focus Body -->
    <!-- Waist -->
    <string name="kneeraise">STEP UP WITH KNEE RAISE</string>
    <string name="march">MARCH IN SAME PLACE</string>
    <string name="abbike">AB BIKES</string>
    <string name="sideplankfrontkick">SIDE PLANK FRONT KICK</string>
    <string name="sidecrunch">SIDE CRUNCH</string>

    <!-- Arm -->
    <string name="bicepcurl">BICEP CURLS</string>
    <string name="bentover">BENT OVER LATERAL RAISE</string>
    <string name="tricepdips">TRICEP DIPS</string>
    <string name="armswing">ARM SWING</string>
    <string name="dumbbellchestpress">DUMB BELL CHEST PRESS</string>

    <!-- Leg -->
    <string name="splitsquat">BULGARIAN SPLIT SQUAT</string>
    <string name="glutesnhip">GLUTES AND HIP</string>
    <string name="bandleg">BAND LEG ABDUCTION CRUNCH</string>
    <string name="bicyclekick">BICYCLE KICK</string>
    <string name="ankletap">ANKLE TAP</string>

    <!-- Relax -->
    <string name="wriststretch">WRIST STRETCH</string>
    <string name="hipstretch">HIP FLEXOR STRETCH</string>
    <string name="rabbitpose">RABBIT POSE</string>
    <string name="backstretch">BACK STRETCH</string>
    <string name="openarm">OPEN ARM CHEST STRETCH</string>
    <string name="absstretch">ABS STRETCH</string>

    <!-- done workout -->
    <string name="done">WORKOUT COMPLETED</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //diet
    <string name="dietPLan">Diet Plan Made Easy</string>
    <string name="views">Views</string>
    <string name="totalTime">Total Time</string>
    <string name="nutrition">Nutrition Per Serving</string>
    <string name="calories">Calories</string>
    <string name="fat">Fat</string>
    <string name="protein">Protein</string>
    <string name="carbs">Carbs</string>
    <string name="ingredient">Ingredients</string>
    <string name="direction">Directions</string>

</resources>