<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RecipesFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:scaleType="fitXY"
                android:src="@drawable/breakfast_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></ImageView>



            <androidx.cardview.widget.CardView
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_marginLeft="260dp"
                android:layout_marginTop="210dp"
                android:background="@color/bottom_item"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/totalTime"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/recipe_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/white"
                        android:text="25 MIN"
                        android:textSize="16sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>



            <TextView
                android:id="@+id/t1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="@string/hello_blank_fragment"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/t2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/t1" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView5"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                app:cardBackgroundColor="@color/yinmnBlue_200"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/t2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="15dp"
                        android:text="@string/nutrition"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="30dp"
                                android:layout_marginRight="10dp"
                                android:text="@string/calories"
                                android:textColor="@color/white"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/cal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="30dp"
                                android:layout_marginTop="6dp"
                                android:layout_marginRight="20dp"
                                android:text="639"
                                android:textColor="@color/black" />

                        </LinearLayout>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/black" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="10dp"
                                android:text="@string/fat"
                                android:textColor="@color/white"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/fat"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:layout_marginTop="6dp"
                                android:layout_marginRight="20dp"
                                android:text="19.9 g"
                                android:textColor="@color/black" />

                        </LinearLayout>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/black" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="10dp"
                                android:text="@string/protein"
                                android:textColor="@color/white"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/pro"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:layout_marginTop="6dp"
                                android:layout_marginRight="20dp"
                                android:text="20.9 g"
                                android:textColor="@color/black" />

                        </LinearLayout>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/black" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="10dp"
                                android:text="@string/carbs"
                                android:textColor="@color/white"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/carbs"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:layout_marginTop="6dp"
                                android:layout_marginRight="20dp"
                                android:text="95.2 g"
                                android:textColor="@color/black" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/ingredient"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView5" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredient_recycler_view"
                android:layout_width="match_parent"
                android:layout_marginRight="16dp"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.0"
                tools:layout_editor_absoluteX="10dp">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/text_direction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/direction"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingredient_recycler_view" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:layout_editor_absoluteX="10dp"
                app:layout_constraintTop_toBottomOf="@+id/text_direction"
                android:id="@+id/direction_recycler_view">

            </androidx.recyclerview.widget.RecyclerView>



        </androidx.constraintlayout.widget.ConstraintLayout>



    </ScrollView>

</FrameLayout>